Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116341

error C2475: 'qbswap': redefinition; 'constexpr' specifier mismatch

    XMLWordPrintable

Details

    • e21ff1f3f (6.6), 98cddeeb4 (dev)

    Description

      C:\Users\qt\work\qt\qtconnectivity\src\bluetooth\qbluetoothdevicediscoveryagent_winrt.cpp(42): error C2475: 'qbswap': redefinition; 'constexpr' specifier mismatch
      C:\Users\qt\work\install\include\QtCore\quuid.h(72): note: see declaration of 'qbswap'
      C:\Users\qt\work\qt\qtconnectivity\src\bluetooth\qbluetoothdevicediscoveryagent_winrt.cpp(42): error C3615: constexpr function 'qbswap' cannot result in a constant expression
      C:\Users\qt\work\qt\qtconnectivity\src\bluetooth\qbluetoothdevicediscoveryagent_winrt.cpp(44): note: failure was caused by an uninitialized variable declaration
      C:\Users\qt\work\qt\qtconnectivity\src\bluetooth\qbluetoothdevicediscoveryagent_winrt.cpp(44): note: see usage of 'dst'
      C:\Users\qt\work\qt\qtconnectivity\src\bluetooth\qbluetoothdevicediscoveryagent_winrt.cpp(48): note: failure was caused by control reaching the end of a constexpr function
      

      Build log: https://testresults.qt.io/logs/qt/qtconnectivity/415ad79f4af5f42be627a0b8a5b87e848f2cd15e/WindowsWindows_11_22H2x86_64WindowsWindows_11_22H2x86_64MSVC2022qtci-windows-11_22H2-x86_64-51-23bd72DebugAndRelease_Sccache_UseConfigure/529c1a7d4522c9a41f70ff0630080b2698ef801e/build_1698188729/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtconnectivity/tasks/1698188715

      Tested changes (refs/builds/qtci/dev/1692701393):
      https://codereview.qt-project.org/c/qt/qtconnectivity/+/498209/2 Update dependencies on 'dev' in qt/qtconnectivity

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ivan.solovev Ivan Solovev
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes