Bluetooth: remove custom implementations of qbswap(QUuid::Id128Bytes)

Starting from qtbase/470b2b8ad9f28eaf24518dfa3f48cc13fcdc421f qbswap()
is provided as a hidden friend for this type, so the custom
implementations for Windows and Android backends in Qt Bluetooth are
no longer required.

Fixes: QTBUG-116341
Pick-to: 6.6
Change-Id: I451de4249a082331f75c1db93ad420cf96d0e3cc
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>